submit button fix color contrast

--- a/style/style.scss
+++ b/style/style.scss
@@ -61,7 +61,7 @@ form {
         padding: .75rem;
         border-radius: 50px;
         border: none;
-        background-color: $blue;
+        background-color: #376CF1;
         color: #fff;
         font-family: inherit;
         font-weight: 600;
